tests/ui/fail/bad_nesting_1.stderr
error: Metavariable `a` must be repeated with `?` nesting. It is repeated with `*`
 --> tests/ui/fail/bad_nesting_1.rs:4:33
  |
4 |     ( $( $a:ident )? ) => { $( $a )* }
  |                                 ^
